<resources>
    <string name="app_name">Fun Time</string>
    <string name="no_internet">No internet</string>

    <string name="email">Email</string>
    <string name="name">Login</string>
    <string name="password">Password</string>
    <string name="authorization">Authorization</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Sign up</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
</resources>