<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="35dp"
    android:background="@drawable/back">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        style="@style/uiText"
        app:layout_constraintBottom_toTopOf="@+id/name_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_l"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/material"
        app:startIconDrawable="@drawable/ic_user_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_l"
        app:layout_constraintVertical_chainStyle="packed"
        >
        <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="text"
        android:lines="1"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toTopOf="@+id/password_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_l"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/material"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/name_l"
        app:layout_constraintBottom_toTopOf="@id/btn"
        >
        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/btn"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:text="@string/sign_in"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_l" />


</androidx.constraintlayout.widget.ConstraintLayout>